--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@types/heredatalens",
   "version": "1.0.0",
-  "description": "TypeScript definitions for HERE Data Lens API for JavaScript",
+  "description": "TypeScript definitions for HERE Data Lens API for JavaScript v2.3.0-31",
   "author": {
     "name": "Bernd Hacker",
     "email": "https://github.com/denyo/"
