--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@types/heredatalens",
-  "version": "1.0.1",
-  "description": "TypeScript definitions for HERE Data Lens API for JavaScript v2.3.0-31",
+  "version": "1.0.2",
+  "description": "TypeScript definitions for HERE Data Lens API for JavaScript 2.3",
   "author": {
     "name": "Bernd Hacker",
     "email": "https://github.com/denyo/"
